--- a/keyboard.toml
+++ b/keyboard.toml
@@ -59,8 +59,12 @@ cols = 6
 row_offset = 0
 col_offset = 0
 ble_addr = [0x18, 0xe2, 0x21, 0x80, 0xc0, 0xc7]
-input_pins = ["P0_24", "P1_00", "P0_11", "P1_04", "P1_06"]
-output_pins = ["P0_02", "P1_15", "P1_13", "P1_11", "P0_10", "P0_09"]
+# nrfmicro
+input_pins = ["P0_13", "P0_24", "P0_09", "P0_10", "P1_06"]
+output_pins = ["P0_29", "P0_02", "P1_13", "P0_03", "P0_28", "P1_11"]
+# nicenano
+# input_pins = ["P0_24", "P1_00", "P0_11", "P1_04", "P1_06"]
+# output_pins = ["P0_02", "P1_15", "P1_13", "P1_11", "P0_10", "P0_09"]
 
 
 [[split.peripheral]]
@@ -69,8 +73,12 @@ cols = 6
 row_offset = 0
 col_offset = 6
 ble_addr = [0x7e, 0xfe, 0x73, 0x9e, 0x66, 0xe3]
-input_pins = ["P0_24", "P1_00", "P0_11", "P1_04", "P1_06"]
-output_pins = ["P0_09", "P0_10", "P1_11", "P1_13", "P1_15", "P0_02"]
+# nrfmicro
+input_pins = ["P0_13", "P0_24", "P0_09", "P0_10", "P1_06"]
+output_pins = ["P1_11", "P0_28", "P0_03", "P1_13", "P0_02", "P0_29"]
+# nicenano
+# input_pins = ["P0_24", "P1_00", "P0_11", "P1_04", "P1_06"]
+# output_pins = ["P0_09", "P0_10", "P1_11", "P1_13", "P1_15", "P0_02"]
 
 
 
